data/derived/comb/progs/unify/prog0858.ml.out
Characters 199-200:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int -> int list -> int list
       but an expression was expected of type int -> int list -> int
       Type int list is not compatible with type int 
